--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Wiame RAKI | Education</title>
+    <title>Karmouchi Asmae | Education</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -14,15 +14,15 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
-    <meta property="og:title" content="Wiame RAKI | Formation">
+    <meta property="og:title" content="Karmouchi Asmae| Formation">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/education.html">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
 
-    <meta name="application-name" content="Wiame RAKI | Formation" />
-    <meta name="apple-mobile-web-app-title" content="Wiame RAKI | Formation" />
+    <meta name="application-name" content="Karmouchi Asmae | Formation" />
+    <meta name="apple-mobile-web-app-title" content="Karmouchi Asmae| Formation" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
 
@@ -314,7 +314,7 @@
                       </div>
                       <div class="ag-timeline-card_info">
                         <div class="ag-timeline-card_desc">
-                        <div class="ag-timeline-card_meta">Cycle Ingénieur d’État - Business Intelligence & Analytics </div>
+                        <div class="ag-timeline-card_meta">Cycle Ingénieur d’État - Software engineer</div>
                         <div class="place">École Nationale Supérieure d’Informatique et d’Analyse des Systèmes- ENSIAS, Rabat  </div>
                         </div>
                       </div>
@@ -338,8 +338,8 @@
                       <div class="ag-timeline-card_info">
                         <div class="ag-timeline-card_desc">
                             <div class="ag-timeline-card_meta">MP - Maths et Physique</div>
-                            <div class="place">Classes Préparatoires aux Grandes Écoles - Centre LYDEX , Benguerir</div>
-                            Classement 110 en CNC
+                            <div class="place">Classes Préparatoires aux Grandes Écoles - Centre MED V , Casablanca</div>
+                            Classement 436 en CNC
                         </div>
                       </div>
                     </div>
@@ -361,8 +361,8 @@
                       </div>
                       <div class="ag-timeline-card_info">
                         <div class="ag-timeline-card_desc">
-                            <div class="ag-timeline-card_meta">Baccalauréat Science Maths B - Option française</div>
-                            <div class="place">Lycée ROCHD , Sala Al Jadida</div>
+                            <div class="ag-timeline-card_meta">Baccalauréat Science Maths A - Option française</div>
+                            <div class="place">Lycée Mustafa el maani , Casablanca</div>
                             Mention Très Bien
                         </div>
                       </div>
