--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" light-mode="dark">
 
 <head>
-    <title>Wiame Raki | Acceuil</title>
+    <title>KARMOUCHI Asmae | Acceuil</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="free portfolio template,portfolio template, portfolio website template, open source, open sourcing, contributing to open source" />
@@ -12,14 +12,14 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="Wiame Raki | Acceuil">
+    <meta property="og:title" content="KARMOUCHI Asmae | Acceuil">
     <meta property="og:description" content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
-    <meta name="application-name" content="Wiame Raki | Acceuil" />
-    <meta name="apple-mobile-web-app-title" content="Wiame Raki | Acceuil" />
+    <meta name="application-name" content="KARMOUCHI Asmae | Acceuil" />
+    <meta name="apple-mobile-web-app-title" content="KARMOUCHI Asmae | Acceuil" />
     <meta name="summary" content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <!--For Dark/Light mode Toggle-->
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
@@ -67,7 +67,7 @@
     </div>
     <center>
         <!-- Home Section -->
-        <div class="text col-sm-6" style="margin-top: 140px;">Bonjour <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, Je suis <span class="header">Wiame RAKI</span>
+        <div class="text col-sm-6" style="margin-top: 140px;">Bonjour <span class="wave"><img src="assets/images/Hand.gif" width="35px"></span>&nbsp;, Je suis <span class="header">KARMOUCHI Asmae</span>
             <div class="center">
                 <div>
                     <img src="assets/images/me.png" alt="" class="rounded-circle" height="300" width="220">
@@ -92,7 +92,7 @@
                         </a>
 
 
-                        <a class="socialicon github" href="https://github.com/Wiame13" target="_blank" rel="author">
+                        <a class="socialicon github" href="https://github.com/AsmaeKarmouchi" target="_blank" rel="author">
                             <!-- SVG code for Github icon -->
                             <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                                 <!-- body -->
